refactor: update counselor deletion process to use CounselSessionService